--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI="mongodb+srv://Gduxdie:20060107@cluster0.w0j70is.mongodb.net/?appName=Cluster0"
+MONGODB_URI="suaURLdomong"
 PORT=3000
+
